Use the right tblgen
We were using llvm-tblgen which given that this is clang may be a
questionable choice. But worse than that we were using it in a way
that it as being found in the PATH.

Use a cmake generator expression with the right target (clang-tblgen)
so it uses the right clang-tblgen, no matter it is an external one or a
built-in one.

This commit fixes ci-infrastructure#13

--- a/clang/include/clang/Basic/CMakeLists.txt
+++ b/clang/include/clang/Basic/CMakeLists.txt
@@ -56,11 +56,12 @@ add_custom_command(
   COMMAND ${PYTHON_EXECUTABLE}
     ${CMAKE_CURRENT_SOURCE_DIR}/../../../utils/EPI/generate-epi-builtins-def.py
     --mode builtins-def
-    --tablegen ${${project}_TABLEGEN_EXE}
+    --tablegen $<TARGET_FILE:clang-tblgen>
     --output-file BuiltinsEPI.def
     ${CMAKE_CURRENT_SOURCE_DIR}/epi_builtins.td
    DEPENDS epi_builtins.td
-     ${${project}_TABLEGEN_TARGET}
+     ${CLANG_TABLEGEN_EXE}
+     ${CLANG_TABLEGEN_TARGET}
      ${CMAKE_CURRENT_SOURCE_DIR}/../../../utils/EPI/generate-epi-builtins-def.py
    VERBATIM)
 add_custom_target(builtins_epi ALL DEPENDS BuiltinsEPI.def)
