--- a/clang/lib/CodeGen/CMakeLists.txt
+++ b/clang/lib/CodeGen/CMakeLists.txt
@@ -116,11 +116,12 @@ add_custom_command(
   COMMAND ${PYTHON_EXECUTABLE}
     ${CMAKE_CURRENT_SOURCE_DIR}/../../utils/EPI/generate-epi-builtins-def.py
     --mode codegen
-    --tablegen ${${project}_TABLEGEN_EXE}
+    --tablegen $<TARGET_FILE:clang-tblgen>
     --output-file EPIBuiltinCodegen.inc
     ${CMAKE_CURRENT_SOURCE_DIR}/../../include/clang/Basic/epi_builtins.td
    DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/../../include/clang/Basic/epi_builtins.td
-     ${${project}_TABLEGEN_TARGET}
+     ${CLANG_TABLEGEN_EXE}
+     ${CLANG_TABLEGEN_TARGET}
      ${CMAKE_CURRENT_SOURCE_DIR}/../../utils/EPI/generate-epi-builtins-def.py
    VERBATIM)
 add_custom_target(builtins_codegen_epi ALL DEPENDS EPIBuiltinCodegen.inc)
